--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="card-hoverImg">
             <input type="file"><ion-icon name="create-outline"></ion-icon>Alterar Foto</button>
           </div>
-          <img class="img-preview" src="https://down-br.img.susercontent.com/file/341310217c020a6f8a214496918f5b45" alt="">
+          <img class="img-preview" src="https://tm.ibxk.com.br/2017/08/28/28162011985276.jpg?ims=352x208" alt="">
 
         </div>
       <input type="text" id="imgInput" placeholder="Insira a URL da imagem">
